--- a/src/PluginUI.css
+++ b/src/PluginUI.css
@@ -39,5 +39,5 @@ p {
 }
 
 .template-option {
-    @apply px-3 py-6 w-full mb-2 shadow rounded-md text-sm text-center hover:bg-gray-200 transition-colors duration-300;
+    @apply px-3 py-6 w-full mb-2 shadow rounded-md text-sm text-center hover:bg-gray-200 transition-all;
 }
