--- a/src/PluginUI.css
+++ b/src/PluginUI.css
@@ -11,7 +11,7 @@ h1 {
 }
 
 input {
-    @apply text-xs p-2 mb-1 w-full;
+    @apply text-xs p-2 mb-1 w-full focus:outline-none focus:border-sky-500 focus:ring-sky-500 rounded-sm focus:ring-1;
 }
 
 p {
@@ -35,7 +35,7 @@ p {
 }
 
 .tab-active {
-    @apply bg-blue-600 text-gray-50;
+    @apply bg-gray-300 text-gray-800 font-semibold;
 }
 
 .template-option {
