--- a/src/PluginUI.css
+++ b/src/PluginUI.css
@@ -11,7 +11,11 @@ h1 {
 }
 
 input {
-    @apply text-xs p-2 mb-1 w-full focus:outline-none focus:border-sky-500 focus:ring-sky-500 rounded-sm focus:ring-2;
+    @apply text-xs p-2 mb-1 w-full focus:outline-none focus:border-sky-500 focus:ring-sky-500 rounded-sm focus:ring;
+}
+
+textarea {
+    @apply border-2 border-gray-100 text-xs p-2 mb-1 w-full focus:outline-none focus:border-sky-500 focus:ring-sky-500 rounded-sm focus:ring;
 }
 
 p {
@@ -39,5 +43,5 @@ p {
 }
 
 .template-option {
-    @apply px-3 py-6 w-full mb-2 shadow rounded-md text-sm text-center hover:bg-gray-200 transition-all;
+    @apply px-2 py-4 mb-2 w-20 shadow rounded-md text-xs text-center hover:bg-gray-200 transition-all;
 }
